# wedding-greeting

./: CMakeLists.txt  README.md  main.cpp
include/: iostream
